--- a/fairnat.config
+++ b/fairnat.config
@@ -1,5 +1,5 @@
 # ----------------------------------------------------------------------------
-# File:        ipshape.config
+# File:        fairnat.config
 # Description: Configuration file for the fairnat.sh Script
 #              You can do all the basic stuff here.
 # ----------------------------------------------------------------------------
