--- a/fairnat.config
+++ b/fairnat.config
@@ -12,23 +12,34 @@ DEV_LAN=eth1
 
 # Please tell me how fast your local area network is in kbit/s.
 # It must be higher than your internet connection speed.
-# However, it is bad if the value is too high.
-# Default is 2000kbit == 2MBit.
+#
+# If your internet connection is the same speed as your LAN, use
+# a higher value here anyway - collisions between download and
+# local traffic can't be avoided then.
+#
+# Default is 2000kbit == 2MBit. Please keep in mind that even on
+# a 10Mbit/100MBit LAN you rarely can use the full rate (because
+# of overhead, collisions, etc.).
 RATE_LAN=2000
 
 # Specify the clients for which we do Masquerading and Shaping.
 # The script assumes that all clients have static IPs in the
 # same subnet as your LAN device.
-# Example: If the IP of DEV_LAN is 192.168.100.42, the line below
-#          would mean that 192.168.100.2, 192.168.100.5, ..., are
+#
+# Example: If the IP of DEV_LAN is 192.168.100.42, the line above
+#          means that 192.168.100.2, 192.168.100.5, etc., are
 #          the IPs of your clients.
-USERS="2 5 6 23 183"
+#          6:23:25 is a group of 3 IPs that all belong to the same user.
+#          Use this notation if a single person has more than one machine
+#          /IP connected to the router.
+USERS="2 5 6:23:25 183"
 
 # If you have clients which need certain port (ranges) to be forwarded,
 # specify them here. The format is "client port client port ...".
 # The example below will forward ports 4000-6999 to 192.168.100.2 and
 # ports 2000-3999 to 192.168.100.183.
 PORTS="2 4000:6999 183 2000:3999"
+# PORTS="" # this disables port forwarding.
 
 # --- Internet ---
 
@@ -59,23 +70,5 @@ RATE_SUB_PERCENT=5
 # If you use a too high value, your users will starve.
 # If you use a too low value, your router will starve :-)
 RATE_LOCAL_PERCENT=5
-
-# --- Binaries: ---
-
-# If you want to specify a certain binary, use "/path/to/bin/foobar"
-# instead of `which foobar`.
-
-# BIN_TC: You need a version that supports HTB.
-#         Usually this is called tc-htb.
-#         If you don't have this, try tc instead of tc-htb.
-#         Otherwise download tc-htb from http://luxik.cdi.cz/~devik/qos/htb/
-BIN_TC=`which tc-htb`
-
-# Only change these if you need to.
-BIN_IPT=`which iptables`
-BIN_IFC=`which ifconfig`
-BIN_GREP=`which grep`
-BIN_SED=`which sed`
-BIN_ECHO=`which echo`
 
 # ----------------------------------------------------------------------------
