Import Fair NAT 0.72

--- a/fairnat.config
+++ b/fairnat.config
@@ -71,4 +71,46 @@ RATE_SUB_PERCENT=5
 # If you use a too low value, your router will starve :-)
 RATE_LOCAL_PERCENT=5
 
+# --- Support for IPP2P (Experimental) ---
+
+# If you want to use IPP2P (marking & tracking P2P connections), set to 1.
+# To use IPP2P, you need a patched kernel and iptables.
+# Learn more about IPP2P here:
+#     http://rnvs.informatik.uni-leipzig.de/ipp2p/index_en.html (english)
+#  or http://rnvs.informatik.uni-leipzig.de/ipp2p/index.html    (german)
+IPP2P_ENABLE=0
+
+# If P2P traffic should be forbidden in general, set to 1.
+# Otherwise P2P will be allowed with lowest priority.
+# This only has an effect if IPP2P_ENABLE=1
+IPP2P_DROP_ALL=0
+
+# Tell us which options to use for IPP2P:
+# Default: Cover all P2P protocols.
+# See IPP2P documentation for details.
+IPP2P_OPTIONS="--ipp2p --apple --bit"
+
+# --- Binaries ---
+
+# For this script, you need a tc-tool that supports HTB.
+# It's usually called tc-htb. At least that's the case on my machine :-P
+# If yours is different, you get 'tc-htb: unknown command' or similar,
+# change this setting.
+BIN_TC=`which tc-htb`
+# BIN_TC=`which tc`         use this if your binary is called tc
+# BIN_TC="/root/bin/my_tc"  or set the full path directly like this.
+
+# All binarys used by Fair NAT can be configured like BIN_TC above:
+#
+# BIN_IPT:        iptables (with support for HTB and probably IPP2P)
+# BIN_TC:         tc (with support for HTB, see above)
+# BIN_IFC:        ifconfig
+# BIN_GREP:       grep
+# BIN_SED:        sed
+# BIN_ECHO:       echo
+# BIN_MODPROBE    modprobe
+#
+# If you don't specify these, the first binary found in your PATH
+# will be used.
+
 # ----------------------------------------------------------------------------
