--- a/fairnat.config
+++ b/fairnat.config
@@ -1,10 +1,14 @@
 # ----------------------------------------------------------------------------
-# File:        fairnat.config
-# Description: Configuration file for the fairnat.sh Script
-#              You can do all the basic stuff here.
+# File:        /etc/ppp/fairnat.config
+# Description: Example configuration file for the fairnat.sh Script
+#              You should be able to do pretty much everything here.
+#              Change FAIRNAT_CONFIG in fairnat.sh if you want another default
+#              location for this configuration file. This variable is at the
+#              beginning of the script.
+# Version:     0.74
 # ----------------------------------------------------------------------------
 
-# --- LAN & Clients ---
+# --- LAN ---
 
 # Specify the network device which is connected with your clients.
 # The script assumes that this device has one static IP.
@@ -21,25 +25,6 @@ DEV_LAN=eth1
 # a 10Mbit/100MBit LAN you rarely can use the full rate (because
 # of overhead, collisions, etc.).
 RATE_LAN=2000
-
-# Specify the clients for which we do Masquerading and Shaping.
-# The script assumes that all clients have static IPs in the
-# same subnet as your LAN device.
-#
-# Example: If the IP of DEV_LAN is 192.168.100.42, the line above
-#          means that 192.168.100.2, 192.168.100.5, etc., are
-#          the IPs of your clients.
-#          6:23:25 is a group of 3 IPs that all belong to the same user.
-#          Use this notation if a single person has more than one machine
-#          /IP connected to the router.
-USERS="2 5 6:23:25 183"
-
-# If you have clients which need certain port (ranges) to be forwarded,
-# specify them here. The format is "client port client port ...".
-# The example below will forward ports 4000-6999 to 192.168.100.2 and
-# ports 2000-3999 to 192.168.100.183.
-PORTS="2 4000:6999 183 2000:3999"
-# PORTS="" # this disables port forwarding.
 
 # --- Internet ---
 
@@ -65,38 +50,86 @@ RATE_DOWN=768        # 768 kbit (common value for DSL in germany)
 RATE_SUB_PERCENT=5
 
 # How much % of the bandwidth should be allowed for the router?
-# Use a minimum of 1 here. The router needs bandwidth for DNS caching
-# (recommended), and services like FTP and Web (not recommended).
-# If you use a too high value, your users will starve.
-# If you use a too low value, your router will starve :-)
+# Use a minimum of 1 here, since the router usually always needs
+# some bandwidth, for example for DNS queries to the outer world,
+# or SSH sessions from the outer world.
 RATE_LOCAL_PERCENT=5
+
+# --- Clients: ---
+
+# Specify the clients for which we do Masquerading and Shaping.
+# The script assumes that all clients have static IPs in the
+# same subnet as your LAN device.
+#
+# Example: If the IP of DEV_LAN is 192.168.100.42, the line above
+#          means that 192.168.100.2, 192.168.100.5, etc., are
+#          the IPs of your clients.
+#          6:23:25 is a group of 3 IPs that all belong to the same user.
+#          Use this notation if a single person has more than one machine
+#          /IP connected to the router.
+USERS="2 5 6:23:25 183"
+
+# If you have clients which need certain port (ranges) to be forwarded,
+# specify them here. The format is "client port client port ...".
+# The example below will forward ports 4000-6999 to 192.168.100.2 and
+# ports 2000-3999 to 192.168.100.183.
+PORTS="2 4000:6999 183 2000:3999"
+# PORTS="" # this disables port forwarding.
+
+# This setting affects the class structure set for each user.
+# "default": one HTB class per user and puts PRIO and SFQ on top of it.
+# "wonder":  uses ~3 HTB classes per user and uses HTB prio parameter.
+#            Very similar to the structure used in Bert Hubert's Wondershaper.
+CLASS_MODE="default"
+
+# Are users allowed to 'borrow' other user's bandwidth if they don't use them?
+# Usually this is a good thing, even if you never have inactive clients.
+# Set to 0 if you don't want to allow users to borrow other users bandwidth.
+BORROW=1
 
 # --- Support for IPP2P (Experimental) ---
 
 # If you want to use IPP2P (marking & tracking P2P connections), set to 1.
-# To use IPP2P, you need a patched kernel and iptables.
+# To use IPP2P, you need a patched kernel and iptables. Unless you activate
+# dropping below, you also need the CONNMARK patch.
 # Learn more about IPP2P here:
 #     http://rnvs.informatik.uni-leipzig.de/ipp2p/index_en.html (english)
 #  or http://rnvs.informatik.uni-leipzig.de/ipp2p/index.html    (german)
 IPP2P_ENABLE=0
-
-# If P2P traffic should be forbidden in general, set to 1.
-# Otherwise P2P will be allowed with lowest priority.
-# This only has an effect if IPP2P_ENABLE=1
-IPP2P_DROP_ALL=0
 
 # Tell us which options to use for IPP2P:
 # Default: Cover all P2P protocols.
 # See IPP2P documentation for details.
 IPP2P_OPTIONS="--ipp2p --apple --bit"
 
+# If P2P traffic should be forbidden in general, set to 1.
+# Otherwise P2P will be allowed with lowest priority.
+# This only has an effect if IPP2P_ENABLE=1
+# Please note that only new connections will be affected.
+IPP2P_DROP_ALL=0
+
+# Together with IPP2P_DROP_ALL=1, this setting will allow dropping
+# of already existing & marked connections. Use this only if you
+# sometimes switch from allowing P2P to dropping P2P.
+IPP2P_DROP_MARKED=0
+
+# --- Hacks ---
+
+# This section is for all the bloody stuff. Well, it's not as bad as it sounds,
+# but you should read a bit of external documentation before using these.
+# No, I'm not explaining them here. You should know what you're doing.
+
+# MSS_CLAMPING (read http://www.lartc.org/lartc.html#LARTC.COOKBOOK.MTU-MSS)
+MSS_CLAMPING=0
+# MSS_CLAMPING="--clamp-mss-to-pmtu"
+# MSS_CLAMPING="--set-mss 128"
+
 # --- Binaries ---
 
 # For this script, you need a tc-tool that supports HTB.
-# It's usually called tc-htb. At least that's the case on my machine :-P
-# If yours is different, you get 'tc-htb: unknown command' or similar,
-# change this setting.
-BIN_TC=`which tc-htb`
+# Per default, the script looks first for tc-htb, then for tc.
+# Set name directly if your HTB-enabled tc is called something else.
+
 # BIN_TC=`which tc`         use this if your binary is called tc
 # BIN_TC="/root/bin/my_tc"  or set the full path directly like this.
 
