--- a/fairnat.config
+++ b/fairnat.config
@@ -124,6 +124,18 @@ MSS_CLAMPING=0
 # MSS_CLAMPING="--clamp-mss-to-pmtu"
 # MSS_CLAMPING="--set-mss 128"
 
+# Use MPU for HTB. From the LARTC Howto on MPU:
+# "A zero-sized packet does not use zero bandwidth. For ethernet, no packet
+#  uses less than 64 bytes. The Minimum Packet Unit determines the minimal
+#  token usage for a packet."
+HTB_MPU=0
+# HTB_MPU=64  # Ethernet
+# HTB_MPU=106 # According to Andy Furniss, this value is suited for DSL users
+
+# Specify overhead per packet for HTB.
+HTB_OVERHEAD=0
+# I don't use this myself yet. :-P Tell me some good values.
+
 # --- Binaries ---
 
 # For this script, you need a tc-tool that supports HTB.
