--- a/fairnat.config
+++ b/fairnat.config
@@ -5,7 +5,7 @@
 #              Change FAIRNAT_CONFIG in fairnat.sh if you want another default
 #              location for this configuration file. This variable is at the
 #              beginning of the script.
-# Version:     0.76
+# Version:     0.77
 # ----------------------------------------------------------------------------
 
 # --- LAN ---
@@ -86,6 +86,17 @@ CLASS_MODE="default"
 # Usually this is a good thing, even if you never have inactive clients.
 # Set to 0 if you don't want to allow users to borrow other users bandwidth.
 BORROW=1
+
+# Usually, each user may use up to $RATE_UP / $RATE_DOWN (see above), e.g. all
+# available bandwidth, as long as the line is free. If you want a lower limit,
+# you can set it here.
+#
+# For example, you have a 500kbit line but don't want a single client to use
+# more than 300kbit for himself. Then you set RATE_DOWN above to 500 and
+# this variable here to 300.
+#
+# CEIL_USER_UP=0
+# CEIL_USER_DOWN=0
 
 # --- Support for IPP2P (Experimental) ---
 
