--- a/fairnat.config
+++ b/fairnat.config
@@ -5,7 +5,7 @@
 #              Change FAIRNAT_CONFIG in fairnat.sh if you want another default
 #              location for this configuration file. This variable is at the
 #              beginning of the script.
-# Version:     0.77
+# Version:     0.78
 # ----------------------------------------------------------------------------
 
 # --- LAN ---
@@ -130,15 +130,25 @@ IPP2P_DROP_MARKED=0
 # but you should read a bit of external documentation before using these.
 # No, I'm not explaining them here. You should know what you're doing.
 
-# MSS_CLAMPING (read http://www.lartc.org/lartc.html#LARTC.COOKBOOK.MTU-MSS)
+# * MSS Clamping
+#   Work around bad MTU settings.
+#   See also http://www.lartc.org/lartc.html#LARTC.COOKBOOK.MTU-MSS)
 MSS_CLAMPING=0
 # MSS_CLAMPING="--clamp-mss-to-pmtu"
 # MSS_CLAMPING="--set-mss 128"
 
-# Use MPU for HTB. From the LARTC Howto on MPU:
-# "A zero-sized packet does not use zero bandwidth. For ethernet, no packet
-#  uses less than 64 bytes. The Minimum Packet Unit determines the minimal
-#  token usage for a packet."
+# * Set Time To Live (TTL) of outgoing packets
+#   Specify the maximum number of hops to the clients here. A too low value will
+#   effectively break your internet connection.
+#   See also http://iptables-tutorial.frozentux.net/iptables-tutorial.html#TTLTARGET
+TTL_SET=0
+# TTL_SET=64
+
+# * Specify overhead for HTB
+#   From the LARTC Howto on MPU:
+#   "A zero-sized packet does not use zero bandwidth. For ethernet, no packet
+#    uses less than 64 bytes. The Minimum Packet Unit determines the minimal
+#    token usage for a packet."
 HTB_MPU=0
 # HTB_MPU=64  # Ethernet
 # HTB_MPU=106 # According to Andy Furniss, this value is suited for DSL users
@@ -167,6 +177,6 @@ HTB_OVERHEAD=0
 # BIN_MODPROBE    modprobe
 #
 # If you don't specify these, the first binary found in your PATH
-# will be used.
+# will be used, which should work for most people.
 
 # ----------------------------------------------------------------------------
