--- a/fairnat.config
+++ b/fairnat.config
@@ -5,7 +5,7 @@
 #              Change FAIRNAT_CONFIG in fairnat.sh if you want another default
 #              location for this configuration file. This variable is at the
 #              beginning of the script.
-# Version:     0.78
+# Version:     0.79
 # ----------------------------------------------------------------------------
 
 # --- LAN ---
@@ -21,10 +21,10 @@ DEV_LAN=eth1
 # a higher value here anyway - collisions between download and
 # local traffic can't be avoided then.
 #
-# Default is 2000kbit == 2MBit. Please keep in mind that even on
+# Default is 2MBit. Please keep in mind that even on
 # a 10Mbit/100MBit LAN you rarely can use the full rate (because
 # of overhead, collisions, etc.).
-RATE_LAN=2000
+RATE_LAN=2mbit
 
 # --- Internet ---
 
@@ -36,11 +36,11 @@ DEV_NET=ppp0
 # Specify the upload speed of your internet connection in kbit/s.
 # Since ISPs tend to overestimate the speeds they offer, it would
 # probably be best if you measure this on a free line.
-RATE_UP=128          # 128 kbit (common value for DSL in germany)
+RATE_UP=128kbit          # 128 kbit (common value for DSL in germany)
 
 # Specify the download speed of your internet connection in kbit/s.
 # Same as RATE_UP, you probably should measure this.
-RATE_DOWN=768        # 768 kbit (common value for DSL in germany)
+RATE_DOWN=768kbit        # 768 kbit (common value for DSL in germany)
 
 # In order to prevent traffic queuing at the ISP side or in your modem,
 # we shape to a slightly lower rate. This way the bottleneck is the router,
@@ -67,7 +67,12 @@ RATE_LOCAL_PERCENT=5
 #          6:23:25 is a group of 3 IPs that all belong to the same user.
 #          Use this notation if a single person has more than one machine
 #          /IP connected to the router.
-USERS="2 5 6:23:25 183"
+#
+# New: You can also specify a custom ceil rate per user.
+#      Syntax:  <user>@<down_ceil>[|<up_ceil>]
+#      However, ceil has to be bigger than the guaranteed rate,
+#      otherwise you will get weird results.
+USERS="2 5 6:23:25 183@1mbit|100kbit"
 
 # If you have clients which need certain port (ranges) to be forwarded,
 # specify them here. The format is "client port client port ...".
