--- a/fairnat.config
+++ b/fairnat.config
@@ -5,8 +5,48 @@
 #              Change FAIRNAT_CONFIG in fairnat.sh if you want another default
 #              location for this configuration file. This variable is at the
 #              beginning of the script.
-# Version:     0.79
+# Version:     0.80
 # ----------------------------------------------------------------------------
+
+# --- Features ---
+
+# Specify what you want Fair NAT to do here.
+# Leave things you don't want out. See below for a list.
+# If you don't know what to do here, leave as is.
+# Order does not matter.
+FEATURES="PROC MODULES RESET NAT FORWARD QOS_DOWN QOS_UP TOS"
+
+# PROC:
+#     Allow Fair NAT to change some system variables in /proc,
+#     like setting /proc/sys/net/ipv4/ip_forward to 1.
+#
+# MODULES:
+#     Try to load kernel modules for QoS first.
+#
+# RESET:
+#     Fair NAT will replace all existing iptables rules with
+#     a very basic configuration. Not healthy for firewalls.
+#     See README for details on firewall compatibility.
+#     (Even without this, Fair NAT will reset it's own rules.)
+#
+# NAT:
+#     Fair NAT will configure NAT.
+#
+# FORWARD:
+#     Fair NAT will configure port forwarding.
+#
+# QOS_DOWN:
+#     Configure LAN device for download shaping.
+#     Existing shaping rules for the LAN device will be removed.
+#
+# QOS_UP:
+#     Configure Internet device for upload shaping.
+#     Existing shaping rules for the Internet device will be removed.
+#
+# TOS:
+#     Allow Fair NAT to change TOS (type-of-service) flag of packets.
+#     Right now, Fair NAT heavily relies on this TOS field for shaping,
+#     so using this feature is highly recommended.
 
 # --- LAN ---
 
@@ -118,6 +158,10 @@ IPP2P_ENABLE=0
 # See IPP2P documentation for details.
 IPP2P_OPTIONS="--ipp2p --apple --bit"
 
+# Let IPP2P check UDP packets also? Set to 1 if you want that feature.
+# An up-to-date IPP2P version is required for this.
+IPP2P_UDP=0
+
 # If P2P traffic should be forbidden in general, set to 1.
 # Otherwise P2P will be allowed with lowest priority.
 # This only has an effect if IPP2P_ENABLE=1
@@ -161,6 +205,12 @@ HTB_MPU=0
 # Specify overhead per packet for HTB.
 HTB_OVERHEAD=0
 # I don't use this myself yet. :-P Tell me some good values.
+
+# The following is in the hacks section because it could allow running
+# multiple instances of Fair NAT on a single server (whatever you'd want
+# that for). The prefix is used for iptables chains used by Fair NAT.
+FAIRNAT_PREFIX="FAIRNAT"
+
 
 # --- Binaries ---
 
